Ported to Python 3.3.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -3,10 +3,12 @@ CHANGES
 =======
 
 
-1.0.3 (unreleased)
-------------------
+2.0.0a1 (2013-03-06)
+--------------------
 
-- Nothing changed yet.
+- Added support for Python 3.3.
+
+- Dropped support for Python 2.4 and 2.5.
 
 
 1.0.2 (2012-07-31)
